kube/deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-proxy-test-primary
  labels:
    app: epp-proxy-test-primary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-proxy-test-primary
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"pi-epp-ip6-ippool\"]"
      labels:
        app: epp-proxy-test-primary
    spec:
      volumes:
        - name: conf
          secret:
            secretName: epp-proxy-test-primary-conf
        - name: tls-keys
          secret:
            secretName: epp-proxy-test-primary-tls
        - name: priv-keys
          secret:
            secretName: epp-proxy-priv
      containers:
        - name: epp-proxy
          image: as207960/epp-proxy:(version)
          imagePullPolicy: Always
          args: ["--log",  "/log", "--conf", "/conf", "--listen", "[::]:50051", "--metrics_listen", "[::]:8000"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/conf"
              name: conf
            - mountPath: "/tls"
              name: tls-keys
            - mountPath: "/priv"
              name: priv-keys
---
apiVersion: v1
kind: Service
metadata:
  name: epp-proxy-test-primary
  labels:
    app: epp-proxy-test-primary
spec:
  selector:
    app: epp-proxy-test-primary
  ports:
    - port: 50051
      targetPort: 50051
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-proxy
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  tls:
    - hosts:
        - test-primary.epp-proxy.as207960.ltd.uk
      secretName: epp-proxy-test-primary-pub-tls
  rules:
    - host: test-primary.epp-proxy.as207960.ltd.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epp-proxy-test-primary
                port:
                  number: 50051
