kube/deploy-test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-proxy-test-secondary
  labels:
    app: epp-proxy-test-secondary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-proxy-test-secondary
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"epp-ip6-ippool\"]"
      labels:
        app: epp-proxy-test-secondary
    spec:
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: epp-proxy-test-secondary-log
        - name: conf
          secret:
            secretName: epp-proxy-test-secondary-conf
        - name: tls-keys
          secret:
            secretName: epp-proxy-test-secondary-tls
        - name: priv-keys
          secret:
            secretName: epp-proxy-priv
      containers:
        - name: epp-proxy
          image: as207960/epp-proxy:(version)
          imagePullPolicy: Always
          args: ["--log",  "/log", "--conf", "/conf", "--listen", "[::]:50051"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/conf"
              name: conf
            - mountPath: "/log"
              name: logs
            - mountPath: "/tls"
              name: tls-keys
            - mountPath: "/priv"
              name: priv-keys
---
apiVersion: v1
kind: Service
metadata:
  name: epp-proxy-test-secondary
  labels:
    app: epp-proxy-test-secondary
spec:
  selector:
    app: epp-proxy-test-secondary
  ports:
    - port: 50051
      targetPort: 50051
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-proxy
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - test-secondary.epp-proxy.as207960.ltd.uk
      secretName: epp-proxy-tls
  rules:
    - host: test-secondary.epp-proxy.as207960.ltd.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epp-proxy-test-secondary
                port:
                  number: 50051
