kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-proxy
  labels:
    app: epp-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epp-proxy
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"pi-epp-ip6-ippool\"]"
      labels:
        app: epp-proxy
    spec:
      volumes:
        - name: conf
          secret:
            secretName: epp-proxy-conf
        - name: tls-keys
          secret:
            secretName: epp-proxy-tls
        - name: tls-client-keys
          secret:
            secretName: epp-client-tls
        - name: priv-keys
          secret:
            secretName: epp-proxy-priv
      containers:
        - name: epp-proxy
          image: as207960/epp-proxy:(version)
          imagePullPolicy: Always
          args: ["--log",  "/log", "--conf", "/conf", "--listen", "[::]:50051", "--metrics_listen", "[::]:8000"]
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: "/conf"
              name: conf
            - mountPath: "/tls"
              name: tls-keys
            - mountPath: "/tls-client"
              name: tls-client-keys
            - mountPath: "/priv"
              name: priv-keys
---
apiVersion: v1
kind: Service
metadata:
  name: epp-proxy
  labels:
    app: epp-proxy
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: epp-proxy
  ports:
    - port: 50051
      targetPort: 50051
      name: grpc
    - port: 8000
      targetPort: 8000
      name: metrics
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: epp-proxy
spec:
  podSelector:
    matchLabels:
      app: epp-proxy
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
        - podSelector:
            matchLabels:
              app: domains
      ports:
        - protocol: TCP
          port: 50051
    - from:
        - namespaceSelector:
            matchLabels:
              role: metrics
      ports:
        - protocol: TCP
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-proxy
  annotations:
    cert-manager.io/cluster-issuer: "gts"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPCS"
spec:
  tls:
    - hosts:
        - epp-proxy.as207960.ltd.uk
      secretName: epp-proxy-pub-tls
  rules:
    - host: epp-proxy.as207960.ltd.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epp-proxy
                port:
                  number: 50051
